--- a/.github/workflows/zeek-matrix.yml
+++ b/.github/workflows/zeek-matrix.yml
@@ -1,24 +1,36 @@
-name: Zeek matrix tests
-
 on:
-  push:
   pull_request:
+  push:
+    branches: [main]
 
 jobs:
-  test:
-    name: test-${{ matrix.zeekver }}
-    runs-on: ubuntu-20.04
+  Check:
     strategy:
-      fail-fast: false
       matrix:
-        zeekver: [zeek, zeek-lts, zeek-nightly]
+        version:
+          - zeek-dev:latest
+          - zeek:lts
+          - zeek:4.2.0
+
+      fail-fast: false
+
+    runs-on: ubuntu-latest
+    container: zeek/${{ matrix.version }}
+
     steps:
       - uses: actions/checkout@v2
-      - uses: zeek/action-zkg-install@v1
-        with:
-          zeek_version: ${{ matrix.zeekver }}
-      - uses: actions/upload-artifact@v2
-        if: failure()
-        with:
-          name: zkg-logs-${{ matrix.zeekver }}
-          path: ${{ github.workspace }}/.action-zkg-install/artifacts
+      - name: Prepare
+        run: |
+          apt-get update
+          apt-get install -y -q --no-install-recommends g++ cmake make libpcap-dev
+      - name: Install
+        run: |
+          git config --global --add safe.directory $PWD
+          git clean -fd
+          eval $(zkg env)
+          echo Y | zkg -vvvvv install .
+      - name: Show logs
+        if: always()
+        run: |
+          tail -n 1000000 $(zkg config state_dir)/logs/*.log
+          tail -n 1000000 $(zkg config state_dir)/testing/*/clones/*/zkg.test_command.*
